2009-07-23  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpReplyChannel.cs, TcpRequestChannel.cs: it somehow adds/expects
	  ReplyTo and MessageId (though it is session-less), and it expects
	  EndRecord at weird stage, inconsistent with [MC-NMF]...
	  Now .NET service accepts one mono client request.

2009-07-23  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpReplyChannel.cs, TcpRequestChannel.cs, TcpBinaryFrameManager.cs:
	  Send and receive unsized message terminator at once.
	  Send EndRecord mutually. Got one .net client request working.

2009-07-23  Atsushi Enomoto  <atsushi@ximian.com>

	* BinaryMessageEncoder.cs : revert the previous dictionary change.
	  They are indeed used for non-in-band-dictionary messages.

2009-07-23  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpDuplexSessionChannel.cs, TcpBinaryFrameManager.cs:
	  split out binary frame manager class into separate file.

2009-07-21  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpReplyChannel.cs : new reply channel implementation.
	* TcpChannelListener.cs : use above for streamed reply channel.
	* TcpDuplexSessionChannel.cs : more streaming mode support.
	* TcpRequestChannel.cs : a couple of updates to get it working
	  with the reply channel above. Still some issues on .NET interop.

2009-07-21  Atsushi Enomoto  <atsushi@ximian.com>

	* RequestContext.cs : added internal derived class that implements
	  some members.

2009-07-21  Atsushi Enomoto  <atsushi@ximian.com>

	* BinaryMessageEncoder.cs : for non-session reader and writer, do not
	  use dictionary.

2009-07-17  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerDuplexChannel.cs: add the registered node itself to peer list.
	  (The messaging must be done as TCP request/reply pattern, so it's
	  not working yet.)

2009-07-17  Atsushi Enomoto  <atsushi@ximian.com>

	* TcpRequestChannel.cs : new channel file (TCP for request/reply
	  messaging pattern). The messaging part is not working yet.
	* TcpChannelFactory.cs : support IRequestChannel.